assert-struct/tests/snapshots/tuples__option_tuple_multiple_errors.snap
---
source: assert-struct/tests/tuples.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/tuples_errors/option_multiple_errors.rs:21:26
   |
21 |             value: Some((100, "other", true)), // All three fields wrong
   |                          ^^^  ^^^^^^^  ^^^^ got false
   |                          |    |
   |                          |    got "test"
   |                          got 75
